# hydration-service

./: .gitignore  Cargo.toml  config.toml  docker-compose.yml  format.sh  formatted-pools.json  package.json  pools.json
apps/backend/: Dockerfile  package.json
apps/backend/src/: index.ts  processes.json
frontend/: Dockerfile  docker-compose.yml  index.html  package.json  vite.config.ts
frontend/public/: processes.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: add-process-form.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: db.ts
src/: config.rs  hyperbeam.rs  main.rs  models.rs  queue.rs  state.rs
